# TDprog

./: .gitignore
FractionS2_Prog&Algo/src/: main.cpp
TP1/src/: fraction.cpp  fraction.hpp  utils.cpp  utils.hpp
TP2/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
TP3/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
TP4/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
TP5/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
TP6/: CMakeLists.txt  ex2.cpp  ex3.cpp  ex4.cpp
TP6/src/: binaryTree.cpp  binaryTree.hpp  main.cpp  node.cpp  node.hpp  smartNode.cpp  smartNode.hpp
TP7/: CMakeLists.txt  ex1.cpp
TP8/: CMakeLists.txt  ex1.cpp  ex2.cpp
